assets/styles/style.css
body {
  --panel-color: rgba(180, 240, 240, 0.4);
  background-image: url('/assets/images/outside.jpg');
  background-size: cover;
}

#main {
  background-color: rgba(255, 255, 255, 0.8);
}

/*HEADER*/

.navbar {
  display: flex;
  justify-content: space-between;
  flex-direction:row;
  padding: 1em 5em 1em 1em;
  background-color: var(--panel-color)
}

.navbar h1, .navbar span {
  word-wrap: normal;
}
/*MAIN*/

#main {
  padding: 2em 0;
}

/*INDEX PAGE */

.index-header {
  text-align: center;
  background-color: var(--panel-color);
  padding: 1em;
}

.address-info {
  text-align: center;
}

.index-top {
  display: flex;
  padding: 2em;
}

.index-section {
  display: flex;
  justify-content: center;
  padding: 2em;
}

.photo-gallery {
  padding: 2em;
  display: flex;
  justify-content: center;
}


/*CALENDAR PAGE*/

.calendar {
  display: flex;
  justify-content: center;
}

/*FAQ PAGE*/

.faq-header-para {
  text-align: center;
}

/*CURRENT SERIES PAGE*/

.worship-section {
  display: flex;
  justify-content: center;
}
#current-series-title {
  text-align: center;
}

/*PHOTOS PAGE*/
.photo-card {
  display: inline-block;
  margin: 2em;
}

/* Style the Image Used to Trigger the Modal */

.myImg {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

.myImg:hover {opacity: 0.7;}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
    overflow: hidden;
}

/* Modal Content (Image) */
.modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}

/* Caption of Modal Image (Image Text) - Same Width as the Image */
.caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}

/* Add Animation - Zoom in the Modal */
.modal-content, .caption {
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
    from {-webkit-transform:scale(0)}
    to {-webkit-transform:scale(1)}
}

@keyframes zoom {
    from {transform:scale(0)}
    to {transform:scale(1)}
}

/* The Close Button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px){
    .modal-content {
        height: 100%;
    }
}

.img {
  height: 100%;
  width: auto;
  max-height: 500px;
}

/*CURRENT SERIES */

.going-deeper{
  display: flex;
}

.going-deeper div:first-child {
  border-right: 1px solid gray;
}

/*STAFF PAGE*/

.staff-main {
  display: flex;
  font-size: 1.3em;
}

.staff-main div:last-child {
  border-left: 1px solid gray;
  padding-left: 2em;
}


.pastor-main h2{
  text-align: center;
  border-bottom: 1px solid gray;
  margin-bottom: 20px;
  padding-bottom: 20px;
}

.pastor-main {
  margin-bottom: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid gray;
}

.staff-secretary h2 {
  text-align: center;
}

.secretary-note {
  border: 1px solid gray;
  padding: 20px;
  margin-bottom: 20px;
}

.secretary-note i {
  display: block;
  margin-bottom: 0.5em;
}

.brian-profile-photo {
  float: left;
  margin: 0 20px 20px 0;
}


/*FOOTER*/

footer {
  background-color: var(--panel-color);
  padding: 1em;
}

